# ShortRun

./: .gitignore  MANIFEST.in  README.md  ShortRun.spec  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: release.yml
scripts/: make_icon.py
shortrun/: __init__.py  __main__.py  gui.py  registry.py  scanner.py  scheduler.py  settings.py
